Work Archives  -fixed vertical align, added overlay button

--- a/css/scss/_classes.scss
+++ b/css/scss/_classes.scss
@@ -342,6 +342,18 @@ a.light-brown:hover {
 	vertical-align: middle;	
 }
 
+.valign-center {
+	position: absolute;
+	top: 50%;
+	@include translateY(-50%);
+
+	@include device-width(6) {
+		position: static;
+		@include translateY(0);
+		top: 0;
+	}
+}
+
 .dropshadow {
 	@include box-shadow(3px 3px 4px #666 );
 	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#666666')";
@@ -517,6 +529,8 @@ hr {
 	left: 0;
 	display: none;
 }
+
+
 
 .lightbox {
 	left: 50%;
@@ -730,14 +744,30 @@ button {
 	display: block;
 	&:after {
 		@include transition(all 0.3s ease);
-		content: '';
+		@include box-sizing(border-box);
+		@include avenir-heavy;
+		@include font-size(20);
+		content: 'View Project';
 		opacity: 0;
 		position: absolute;
 		top: 0;
 		left: 0;
 		right: 0;
 		bottom: 0;
-		background: rgba(#000, 0.3);
+		background: rgba(#fbea99, 0.8);
+		z-index: 200;
+		color: #333;
+		text-align: center;
+		padding-top: 10%;
+
+		@include device-width(6) {
+			padding-top: 30%;
+		}
+
+		@include device-width(4) {
+			padding-top: 35%;
+		}
+
 
 		.no-opacity & {
 			display: none;
